2000-01-18  Bruno Haible  <haible@ilog.fr>

	* posix/fnmatch.c (ISWCTYPE): New macro.
	(__wcschrnul): New function.
	(BTOWC): New macro. Define it instead of __btowc.
	(is_char_class) [!_LIBC]: Fix 'mstate_t' typo. Fix 2nd arg to
	wcsrtombs. Call wctype, not __wctype.
	* posix/fnmatch_loop.c (FCT): Use ISWCTYPE instead of __iswctype, and
	BTOWC instead of __btowc.

2000-01-18  Andreas Jaeger  <aj@suse.de>

	* inet/Versions: Add new functions added on 2000-01-17.

2000-01-18  Jakub Jelinek  <jakub@redhat.com>

	* dirent/dirent.h (getdentries): Correct prototype to use __off64_t.

2000-01-18  Ulrich Drepper  <drepper@cygnus.com>

	* timezone/antarctica: Update from tzdata2000a.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/backward: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/southamerica: Likewise.
	* timezone/zone.tab: Likewise.

	* nscd/connections.c (dbs): Use
	PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP for .lock.
	Pretty printing.

	* nscd/hstcache.c (cache_addhst): Don't automatically add IPv6
	address.  Suggested by Philip Blundell.

	* posix/TESTS: Fix expected result for test cases with * with no
	leading expression.

	* sysdeps/unix/sysv/linux/fstatvfs.c: Move actual code in...
	* sysdeps/unix/sysv/linux/internal_statvfs.c: ...here.  New file.
	* sysdeps/unix/sysv/linux/statvfs.c: Don't use fstatvfs since the
	open call would require read permission.
	Patch by James Antill <james@and.org>.

	* sysdeps/unix/sysv/linux/Dist: Add internal_fnmatch.c.

	* inet/getnameinfo.c: Terminate host name for NI_NOFQDN.
	* sysdeps/posix/getaddrinfo.c: Correct modifications done for
	PR1515.  Patches by Hideaki YOSHIFUJI <yoshfuji@ecei.tohoku.ac.jp>.

	* posix/regex.h (RE_SYNTAX_POSIX_EXTENDED): Add RE_CONTEXT_INVALID_OPS.
	* posix/regex.c (regex_compile): Return appropriate errors for
	unterminated brace expressions.  Detect invalid characters
	in brace expressions.
	* posix/bits/posix2_lim.h: Define RE_DUP_MAX correctly.